[package]
name = "pallet-ismp"
version = "0.1.0"
edition = "2021"


[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.3", default-features = false }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
ismp-rs = { git = "ssh://git@github.com/polytope-labs/ismp-rust.git", branch = "main", default-features = false }
mmr-lib = { package = "ckb-merkle-mountain-range", version = "0.5.2", default-features = false }
serde = { version = "1.0.136", features = ["derive"], optional = true }
derive_more = { version = "0.99.17", default-features = false, features = ["from", "into", "display"] }
sync-committee-primitives = { git="https://github.com/polytope-labs/sync-committee-rs", branch="main", default-features = false }
sync-committee-prover = { git="https://github.com/polytope-labs/sync-committee-rs", branch="main", default-features = false }
sync-committee-verifier = { git="https://github.com/polytope-labs/sync-committee-rs", branch="main", default-features = false }
patricia-merkle-trie = {git ="https://github.com/polytope-labs/patricia-merkle-trie", branch="main", default-features=false }
trie-db = { version= "0.24.0", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
rlp = { version = "0.5.1", default-features = false }
hex = "0.4.3"
hex-literal = "0.3.4"
primitive-types = { version = "0.12.0", features = ["rlp"] }
rlp-derive = "0.1.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"],  optional = true }
ethabi = "18.0.0"

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "scale-info/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "ismp-rs/std",
    "mmr-lib/std",
    "sp-api/std",
    "serde",
    "patricia-merkle-trie/std",
    "trie-db/std",
    "hash-db/std",
    "rlp/std",
    "primitive-types/std",
    "tiny-keccak"
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]


[workspace]
resolver = "2"

members = [
    "rpc",
    "runtime-api"
]