[package]
name = "pallet-grandpa-client"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
    "derive"
] }
primitive-types = { version = "0.12.1", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# polytope labs
ismp = { git = "https://github.com/polytope-labs/ismp-rs", branch = "main", default-features = false }
primitives = { package = "grandpa-primitives", path = "./primitives", default-features = false }
verifier = { package = "grandpa-verifier", path = "./verifier", default-features = false}
pallet-ismp = { path = "../pallet-ismp", default-features = false }


# substrate
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-trie = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }

# cumulus
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "release-v0.9.420", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "cumulus-primitives-core/std",
    "ismp/std",
    "sp-trie/std",
    "sp-consensus-aura/std",
    "sp-runtime/std",
    "sp-io/std",
    "primitive-types/std",
    "pallet-ismp/std",
    "sp-core/std",
    "primitives/std",
    "verifier/std",
]
