[package]
name = "transaction-payment"
version = "0.1.0"
edition = "2021"
authors = ["Polytope Labs <hello@polytope.technology>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.1.3", default-features = false, features = [
	"derive",
] }
pallet-ismp = { package = "pallet-ismp", git = "https://github.com/polytope-labs/substrate-ismp", branch = "main", default-features = false }