[package]
name = "ismp-transaction-payment"
version = "0.1.0"
edition = "2021"
authors = ["Polytope Labs <hello@polytope.technology>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
pallet-asset-tx-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }

# crates.io
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
scale-codec = { package = "parity-scale-codec", version = "3.1.3", default-features = false, features = [
	"derive",
] }
log = { version = "0.4.17", default-features = false }

# local
pallet-ismp = { path = "../pallet-ismp", default-features = false }

[features]
default = ["std"]
std = [
    "scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "pallet-ismp/std",
    "pallet-transaction-payment/std",
    "pallet-asset-tx-payment/std",
    "log/std",
]
