[package]
name = "grandpa-light-client-verifier"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
anyhow = { version = "1.0.64", default-features = false }
finality-grandpa = { version = "0.16.0", features = ["derive-codec"], default-features = false }
hash-db = { version = "0.15.2", default-features = false }
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }

sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }

primitives = { package = "grandpa-light-client-primitives", path = "../primitives", default-features = false }
#light-client-common = { path = "../../../light-clients/common", default-features = false }*/

[features]
default = ["std"]
std = [
    "codec/std",
    "anyhow/std",
    "finality-grandpa/std",
    "hash-db/std",
    "frame-support/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-trie/std",
    "sp-finality-grandpa/std",
    "sp-state-machine/std",
    "sp-io/std",
    "primitives/std",
    "serde/std",
    "sp-storage/std",
    #"light-client-common/std",
]
