[package]
name = "ismp-evm"
version = "0.1.0"
edition = "2021"
authors = ["Polytope Labs <hello@polytope.technology>"]

[dependencies]
# substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }

# EVM support
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.42", default-features = false }
fp-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.42", default-features = false }
alloy-sol-types = { git = "https://github.com/alloy-rs/core", rev = "3d89ec51a9400ae1f323dc508f609699284afe11", default-features = false }
alloy-primitives = { git = "https://github.com/alloy-rs/core.git", rev = "3d89ec51a9400ae1f323dc508f609699284afe11", default-features = false }


 # polytope labs
ismp-rs = { package = "ismp", git = "https://github.com/polytope-labs/ismp-rs", branch = "main", default-features = false }

# crates.io
codec = { package = "parity-scale-codec", version = "3.1.3", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
log = { version = "0.4.19", default-features = false }

# local
ismp-primitives = { path = "../primitives", default-features = false }
pallet-ismp = { path = "../", default-features = false }

[dev-dependencies]
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
ismp-testsuite = { git = "https://github.com/polytope-labs/ismp-rs", branch = "main" }
pallet-ismp = { path = "../", features = ["testing"] }
hex = "0.4.3"
hex-literal = "0.4.1"

[features]
default = ["std"]
std = [
    "codec/std",
    "log/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "ismp-rs/std",
    "ismp-primitives/std",
    "pallet-evm/std",
    "fp-evm/std",
    "alloy-primitives/std",
    "alloy-sol-types/std",
    "pallet-ismp/std"
]

