[package]
name = "ismp-parachain-runtime-api"
version = "0.1.0"
edition = "2021"
authors = ["Polytope Labs <hello@polytope.technology>"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
primitive-types = { version = "0.12.1", default-features = false }

[features]
default = ["std", "primitive-types/std"]
std = ["sp-api/std"]
